--- a/src/themes/darkula/css/vars.css
+++ b/src/themes/darkula/css/vars.css
@@ -1,11 +1,11 @@
 :root {
-	--bg-color: #444;
+	--bg-color: #3c3f41;
 	--text-color: #bbb;
 	--active-text-color: #2597ed;
 	--active-text-color-hover: #549bff;
 	--textDescription-text-color: #686868;
 
-	--element-bg-color: #444;
+	--element-bg-color: #3c3f41;
 	--element-bg-color-hover: #262833;
 	--element-bg-color-selected: #2373c4;
 	--element-border-color: #686868;
@@ -19,7 +19,7 @@
 	--input-border-width: 1px;
 	--input-border: var(--input-border-width) solid var(--input-border-color);
 
-	--active-element-bg-color: #555;
+	--active-element-bg-color: #4c5052;
 	--inactive-element-text-color: #aaa;
 
 	--head-background: #444;
