--- a/src/components/panels/console/console.css
+++ b/src/components/panels/console/console.css
@@ -24,6 +24,7 @@ x-ide-panel-console div[name="log"] {
 	overflow: auto;
 	padding: 10px;
 	box-sizing: border-box;
+	background: var(--space-bg-color);
 }
 
 x-ide-panel-console div[name="log"] > div {
