--- a/src/components/app/appearance/themes/common/css/html.css
+++ b/src/components/app/appearance/themes/common/css/html.css
@@ -3,8 +3,8 @@ html, body {
 	height: 100%;
 	padding:0;
 	margin: 0;
-	background: rgb(16, 16, 25);
-	color:white;
+	background: var(--body-bg-color);
+	color: var(--body-text-color);
 	Font-Family: Arial, Serif, serif;
 	overflow: hidden;
 }
