--- a/src/components/app/appearance/themes/common/css/scrollbar.css
+++ b/src/components/app/appearance/themes/common/css/scrollbar.css
@@ -11,31 +11,32 @@ html {
 
 ::-webkit-scrollbar {
 	width: 8px;
-	height: 3px;
+	height: 8px;
 }
 
 ::-webkit-scrollbar-button {
 	background-color: #666;
-	height: 1px;
+	height: 0;
+	width: 0;
 }
 
 ::-webkit-scrollbar-track {
-	background-color: #000;
+	background-color: transparent;
 }
 
 ::-webkit-scrollbar-track-piece {
-	background-color: #646464;
+	background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-	height: 50px;
-	background-color: var(--space-bg-color);
-	border-radius: 3px;
-	border-left: 1px solid #646464
+	height: 0;
+	width: 0;
+	background-color: var(--body-hr-color);
+	border: 0;
 }
 
 ::-webkit-scrollbar-corner {
-	background-color: #646464;
+	background-color: transparent;
 }
 
 ::-webkit-resizer {
