--- a/src/components/app/keymap/keymap.html
+++ b/src/components/app/keymap/keymap.html
@@ -1,5 +1,7 @@
 <template name="Tpl_setting_keymap">
-	<div>
-		Keymap settings:
-	</div>
+	<h2>Keymap</h2>
+
+	<h3>Keymap settings</h3>
+	<x-tree value:="m.keymapTree"></x-tree>
+
 </template>
