--- a/src/components/panels/find/find.html
+++ b/src/components/panels/find/find.html
@@ -1,3 +1,3 @@
 <template name="Tpl_find">
-	Search across all project files will be implemented in ms3
+	Search across all project files will be implemented in future
 </template>
