--- a/src/components/app/appearance/appearance.html
+++ b/src/components/app/appearance/appearance.html
@@ -18,6 +18,7 @@
 		<div><input type="checkbox" value:="m.uiOptions.showGutter"> <label onclick="m.uiOptions.showGutter = !m.uiOptions.showGutter">Show gutter</label></div>
 		<div><input type="checkbox" value:="m.uiOptions.showLineNumbers"> <label onclick="m.uiOptions.showLineNumbers = !m.uiOptions.showLineNumbers">Show line numbers</label></div>
 		<div><input type="checkbox" value:="m.uiOptions.showIndent"> <label onclick="m.uiOptions.showIndent = !m.uiOptions.showIndent">Show tree indent guides</label></div>
+		<div><input type="checkbox" value:="m.uiOptions.showWhiteSpaces"> <label onclick="m.uiOptions.showWhiteSpaces = !m.uiOptions.showWhiteSpaces">Show white spaces</label></div>
 		<div><input type="checkbox" value:="m.uiOptions.showStatusBar"> <label onclick="m.uiOptions.showStatusBar = !m.uiOptions.showStatusBar">Show status bar</label></div>
 	</div>
 
